--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "lib": [ "es2015", "dom" ],
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
